# unicache

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  build_and_install.sh  pyproject.toml
examples/: api_example.py  basic_example.py  benchmark.py  download_example.py  fast_download_test.py
src/: block.rs  lib.rs
unicache/: __init__.py  api.py  cache_utils.py  cli.py  downloader.py
