[package]
name = "unicache"
version = "0.1.0"
edition = "2021"

[lib]
name = "unicache_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
blake3 = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8.0"
memmap2 = "0.7.1"
tempfile = "3.8.0"
thiserror = "1.0"
hex = "0.4.3" 