[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "unicache"
version = "0.1.0"
description = "Fast block-based deduplicated cache storage backend"
authors = [
    {name = "UniCache Team", email = "example@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "tqdm>=4.0.0",
    "requests>=2.0.0",
    "hf-transfer>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
unicache = "unicache.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "unicache.unicache_rs" 